# AI-Code-Reviewer

./: .env.example  .gitignore  README.md  pyproject.toml  review.bat
config/: rules.yaml
src/code_reviewer/: __init__.py  main.py
src/code_reviewer/agents/: __init__.py  aggregator.py  base.py  context.py  logic.py  orchestrator.py  security.py  static.py  style.py
src/code_reviewer/api/: models.py  server.py
src/code_reviewer/inputs/: __init__.py  diff_input.py  file_input.py
src/code_reviewer/outputs/: __init__.py  artifact.py  severity.py  suggestions.py
src/code_reviewer/pipeline/: __init__.py  runner.py
tests/: test_agents.py  test_outputs.py  test_pipeline.py
tests/fixtures/: sample_bad.py  sample_clean.py
