[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-reviewer"
version = "0.1.0"
description = "AI-powered multi-agent code review system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "google-generativeai>=0.7.0",
    "anthropic>=0.28.0",
    "rich>=13.7.1",
    "typer>=0.12.3",
    "pygments>=2.18.0",
    "ruff>=0.4.8",
    "bandit>=1.7.9",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.1",
    "aiofiles>=23.2.1",
    "gitpython>=3.1.43",
    "unidiff>=0.7.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
code-reviewer = "code_reviewer.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/code_reviewer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
